# AddingDoublingRT

./: .gitignore  CMakeLists.txt  README.md
src/: adding.hpp  adding_doubling.hpp  constants.hpp  doubling.hpp  example.cpp  layer.hpp  matrix.hpp  phase_matrix.cpp  phase_matrix.hpp  planck.cpp  planck.hpp  quadrature.cpp  quadrature.hpp  solver.cpp  workspace.hpp
src_cuda/: cuda_adding.cuh  cuda_batched_kernels.cuh  cuda_batched_solver.cu  cuda_batched_solver.cuh  cuda_doubling.cuh  cuda_layer.cuh  cuda_matrix.cuh  cuda_phase_matrix.cuh  cuda_planck.cuh  cuda_planck_single.cuh  cuda_quadrature.cuh  cuda_solver.cu  cuda_solver.cuh  cuda_warp_adding.cuh  cuda_warp_doubling.cuh  cuda_warp_layer.cuh  cuda_warp_matrix.cuh
src_jax/: __init__.py  adding.py  batch_solver.py  config.py  doubling.py  example.py  phase_matrix.py  planck.py  quadrature.py  solver.py
tests/: benchmark_all.py  benchmark_cuda.cu  main.cpp  test_ad_solver.cpp  test_cuda_solver.cu  test_jax_solver.py  test_temperature_jacobian.cpp  testing.hpp
